--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -28,7 +28,7 @@ Since the pollen motion observations of the botannist Brown in 1826, scientists 
 
 To better understand the brownian motion of suspended particles on a liquid Einstein derived a microscopic model of the diffusion motion based on the molecular-kinetic theory of heat on the miraculous year of 1905.\autocite{einstein1905motion} To determine the so-called self-diffusion coefficient, he followed the motion of a particle assumed independent from other particles and time steps large enough to consider mutually independent two consecutive motions.  By using the particle distribution of $N$ independent diffusing particle, he redefined the diffusion coefficient as a function of the mean squared displacement (MSD) of a particle. In a tridimensional space, we have the following Einstein relation:
 \begin{equation}\label{eq:einstein}
-  \langle {r(t)}^2 \rangle = 2dD\e{diff}t
+  \langle {r(t)}^2 \rangle = 2dD\e{diff}t = 6D\e{diff}t
 \end{equation}
 where  $d$ is the dimension of the space in which the particle diffuses ($d=3$ in a volume) and $r(t)$ is the displacement of a particle from the time $0$ to $t$. The brackets represent the average over all independent trajectories (different particles and different time origins). This equation can be generalized to the diffusion of an adsorbate in the adsorbed phase, which describes how easy it is for a particle to move inside a nanoporous material. A low diffusion coefficient means a limited access to the pores of the structure as illustrated on Figure~\ref{fgr:intro_diffusion}.
 
@@ -52,7 +52,7 @@ In a classical modeling, the forces are determined using the well-named forcefie
 \end{equation}
 where $\epsilon_{ij}$ and $\sigma_{ij}$ are the LJ parameters of the pair of atoms $ij$. And the resulting force is simply the sum of the forces $\mathbf{F}_i=\sum_{j}\mathbf{f}_{ij}$ exerted by the surrounding atoms $j$. To reduce the computation time required, molecular simulations only consider the atoms within a given cutoff radius. 
 
-Now that we defined the force $\mathbf{F}_i$, we can put a molecule in motion by integrating the equation~\ref{eq:newton} from a time $t$ to a time $t+\delta t$. There are different methods to integrate equation of motion such as the Euler or velocity-Verlet scheme presented in the book of Frenkel et al.\autocite{frenkel2001md} Here, we will focus on the \emph{leap frop} integration implemented in the RASPA\autocite{dubbeldam2016} software that we used for our simulations. The position $\mathbf{r}_i$ and the velocity $\dot{\mathbf{r}}_i$ are between each time step $\delta t$ using the following equations:
+Now that we defined the force $\mathbf{F}_i$, we can put a molecule in motion by integrating the equation~\ref{eq:newton} from a time $t$ to a time $t+\delta t$. There are different methods to integrate equation of motion such as the Euler or velocity-Verlet scheme presented in the book of Frenkel et al.\autocite{frenkel2001md} Here, we will focus on the \emph{leap frop} integration implemented in the RASPA2\autocite{dubbeldam2016} software that we used for our simulations. The position $\mathbf{r}_i$ and the velocity $\dot{\mathbf{r}}_i$ are between each time step $\delta t$ using the following equations:
 \begin{equation}\label{eq:frogleap_integration}
   \begin{split}
     \dot{\mathbf{r}}_i\left(t+\tfrac{1}{2}\delta t\right) & = \dot{\mathbf{r}}_i\left(t-\tfrac{1}{2}\delta t\right) + \tfrac{1}{m_i}\mathbf{f}_i \\
@@ -63,7 +63,7 @@ From the initial conditions $(\mathbf{r}_i(0),\dot{\mathbf{r}}_i(0.5\delta t))$,
 
 \subsubsection{Diffusivity calculation using an MD trajectory}
 
-I used the MSD sampling technique implemented in RASPA\autocite{dubbeldam2016} that was presented in an article~\cite{Dubbeldam_2009} by a few authors of the adsorption simulation software. The approach is based on a modified approach of the order-$\mathbf{n}$ algorithm described in the book~\cite{frenkel2001msd} of Frenkel and Smit. Therefore, I will focus on the so-called multiple window algorithm used to calculate the diffusion coefficients of xenon and krypton in this chapter. 
+I used the MSD sampling technique implemented in RASPA2\autocite{dubbeldam2016} that was presented in an article~\cite{Dubbeldam_2009} by a few authors of the adsorption simulation software. The approach is based on a modified approach of the order-$\mathbf{n}$ algorithm described in the book~\cite{frenkel2001msd} of Frenkel and Smit. Therefore, I will focus on the so-called multiple window algorithm used to calculate the diffusion coefficients of xenon and krypton in this chapter. 
 
 To understand it, I will start by explaining what a window algorithm would do and how it generalizes to the multiple window algorithm we are interested in.
 First, let us consider a single MD trajectory of duration $t\e{tot}=N\e{tot}\delta t$. This trajectory can be used to generate displacement of any size $\tau$. Naively, we can start by taking ${\lVert\mathbf{r}_i(\tau)-\mathbf{r}_i(0)\rVert}^2$ as a square displacement of a sub-trajectory $\mathcal{T}(0\rightarrow\tau)$ of duration $\tau$. 
@@ -77,9 +77,9 @@ To efficiently sample the trajectory into sub-trajectories that are independent 
     \caption{Illustration of the generation of trajectories of size $\tau$ by shifting the origins of multiple durations $\delta\tau$. }\label{fgr:window_msd}
 \end{figure}
 
-The major drawback of this method is that we need to define a timescale $\left\{\delta\tau, \ldots, K\delta\tau\right\}$ beforehand. In order to be able to access the different timescales in a single simulation, we can perform a multiple window algorithm developed by Dubbeldam et al.\ and used in the RASPA software to compute mean squared displacements (MSD) in a molecular dynamics simulation.
+The major drawback of this method is that we need to define a timescale $\left\{\delta\tau, \ldots, K\delta\tau\right\}$ beforehand. In order to be able to access the different timescales in a single simulation, we can perform a multiple window algorithm developed by Dubbeldam et al.\ and used in the RASPA2 software to compute mean squared displacements (MSD) in a molecular dynamics simulation.
 
-The different time windows are defined in a recursive way using the default parameters of RASPA. The first time window is defined by $K=25$ displacements of duration $\delta t, 2\delta t, \ldots,K\delta t$ with a shift of $\delta t$ (the default shift value $\delta t$ of the first window can be changed with the parameter SampleMSDEvery). The second window is now based on a sampling duration $\delta \tau_1 = K\delta t$ and the sub-trajectories will have durations of $\left(\tau_1^{(1)} = \delta\tau_1\right),\ldots,\left(\tau_1^{(k)} = K\delta\tau_1\right)$. If we repeat the process recursively until no window can be generated anymore, and the $i$\e{th} window would have a sampling duraction of $\delta \tau_i = K^i\delta t$ and sub-trajectories durations of $\left(\tau_i^{(1)} = \delta\tau_i\right),\ldots,\left(\tau_i^{(k)} = K\delta\tau_i\right)$. The time scale $\delta \tau_i = K^i\delta t$ we sample follows a geometrical progression and very different time scales can be accessed using this method in order to find the time scale corresponding to the diffusion regime (linear relation between the MSD and the duration of the sub-trajectories used in the averaging). For example on Figure~\ref{fgr:MSD_init}, we can see the different timescales and the exponent value $b$ of a fit to a function of type $x \mapsto ax^b$ for the different time windows --- values of $b$ near $1$ can be associated to a diffusion regime. The determination of the diffusion coefficient is now reduced to a simple fitting problem that will be explained in more details in the presentation of the diffusion coefficient screening in section~\ref{sct:md_screening}.
+The different time windows are defined in a recursive way using the default parameters of RASPA2. The first time window is defined by $K=25$ displacements of duration $\delta t, 2\delta t, \ldots,K\delta t$ with a shift of $\delta t$ (the default shift value $\delta t$ of the first window can be changed with the parameter SampleMSDEvery). The second window is now based on a sampling duration $\delta \tau_1 = K\delta t$ and the sub-trajectories will have durations of $\left(\tau_1^{(1)} = \delta\tau_1\right),\ldots,\left(\tau_1^{(k)} = K\delta\tau_1\right)$. If we repeat the process recursively until no window can be generated anymore, and the $i$\e{th} window would have a sampling duraction of $\delta \tau_i = K^i\delta t$ and sub-trajectories durations of $\left(\tau_i^{(1)} = \delta\tau_i\right),\ldots,\left(\tau_i^{(k)} = K\delta\tau_i\right)$. The time scale $\delta \tau_i = K^i\delta t$ we sample follows a geometrical progression and very different time scales can be accessed using this method in order to find the time scale corresponding to the diffusion regime (linear relation between the MSD and the duration of the sub-trajectories used in the averaging). For example on Figure~\ref{fgr:MSD_init}, we can see the different timescales and the exponent value $b$ of a fit to a function of type $x \mapsto ax^b$ for the different time windows --- values of $b$ near $1$ can be associated to a diffusion regime. The determination of the diffusion coefficient is now reduced to a simple fitting problem that will be explained in more details in the presentation of the diffusion coefficient screening in section~\ref{sct:md_screening}.
 
 This methodology can then be used replicated to thousands of structures to characterize the diffusion properties of these materials. Several screenings have already been carried out in the literature as presented in the chapter 1 in the section dedicated to transport property screenings. We will now dive a little deeper in the prediction of these quantities using machine learning.
 
@@ -160,7 +160,7 @@ Then, there is a transition from the ballistic regime to the pseudo-diffusional 
 
 If we use the right plot of Figure~\ref{fgr:MSD_linear_init} to fit a linear relation and deduct the diffusion coefficient, we can have an underestimated value of the diffusion coefficient of $2.24\times 10^{-8}$~\si{\square\cm\per\s} --- it is an underestimation because the MSD is rather concave, which reduces the slope in the fitting process. This value is already a good estimation of the diffusion coefficient considering the rather high exponent $\alpha$ value in the with regard to $K_\alpha\tau^\alpha$.
 
-Since there is an element of randomness in the initial position of xenon (block pockets have been calculated for a \SI{1.5}{\angstrom}-radius probe), we need to measure the effet of running different MD simulations of the value of the diffusion coefficients. To measure this uncertainty across different MD simulations with different initial positions determined by with different random seed. In RASPA, the random seed is simply equal to the UNIX time upon launching the MD simulation. This ensures that a different random seed is given to the $10$ different MD simulations we launched using the exact same parameters as mentioned previously. We found that the average diffusion coefficient value equals $2.13\times 10^{-8}$~\si{\square\cm\per\s} and the standard deviation equals $0.37\times 10^{-8}$~\si{\square\cm\per\s}, which represents about {17\%} of the average value. We could estimate the uncertainty to about {17\%} on the diffusion coefficient for a rather low coefficient around $10^{-8}$~\si{\square\cm\per\s}, we could expect lower uncertainty for less obstructing materials. 
+Since there is an element of randomness in the initial position of xenon (block pockets have been calculated for a \SI{1.5}{\angstrom}-radius probe), we need to measure the effet of running different MD simulations of the value of the diffusion coefficients. To measure this uncertainty across different MD simulations with different initial positions determined by with different random seed. In RASPA2, the random seed is simply equal to the UNIX time upon launching the MD simulation. This ensures that a different random seed is given to the $10$ different MD simulations we launched using the exact same parameters as mentioned previously. We found that the average diffusion coefficient value equals $2.13\times 10^{-8}$~\si{\square\cm\per\s} and the standard deviation equals $0.37\times 10^{-8}$~\si{\square\cm\per\s}, which represents about {17\%} of the average value. We could estimate the uncertainty to about {17\%} on the diffusion coefficient for a rather low coefficient around $10^{-8}$~\si{\square\cm\per\s}, we could expect lower uncertainty for less obstructing materials. 
 
 Now that we have more confidence on the method we are using, we will try to probe higher time-scales than the one accessible with an MD time step of \SI{1}{\fs}, because the diffusion regime seems to be occuring rather at the \SI{10}{\ns} time-scale. We ran a first calculation with 500 million step to confirm that we obtain a similar diffusion coefficient value. The time window between \SI{2}{\ns} and \SI{47}{\ns}, and the MSD are calculated from about 200 sampled trajectories, which gives rather correct values. We can obtain a more accurate diffusion coefficient of $2.6\times 10^{-8}$~\si{\square\cm\per\s}, which is very close to the one obtained in the previous approach. The value is slightly higher (which is expected) since the previous values was over-estimated. This approach is therefore consistent with the previous one.
 
@@ -171,7 +171,7 @@ To further back-up the use of a higher time integration step, we need to underst
 
 \subsubsection{Screening procedure}
 
-In order to include the transport properties in our analysis, I performed MD calculations of a xenon or krypton at infinite dilution (no guest--guest interactions) for the 6,525 non-disordered most selective materials. For each of them, 500 million steps of MD were planned in the RASPA script in the calculation machines and 2 to 3 restarts were done on the slowest simulations so that every MSD data were obtained after 2--3 days. After this process, only 432 structures have finished the planned 500 million steps, but it does not mean that the MSD is not exploitable for the determination of the diffusion coefficients. 
+In order to include the transport properties in our analysis, I performed MD calculations of a xenon or krypton at infinite dilution (no guest--guest interactions) for the 6,525 non-disordered most selective materials. For each of them, 500 million steps of MD were planned in the RASPA2 script in the calculation machines and 2 to 3 restarts were done on the slowest simulations so that every MSD data were obtained after 2--3 days. After this process, only 432 structures have finished the planned 500 million steps, but it does not mean that the MSD is not exploitable for the determination of the diffusion coefficients. 
 
 To determine the diffusion coefficients we analyzed two time-scales (2--47\si{\ns} and 50--950~\si{\ns}) to fit the MSD with a linear function. We chose the linear fit with the highest determination coefficient (within $0$ and $1$) of both time-scales to output a value of diffusion coefficient. After this step, we removed structures with a determination coefficient lower than $0.9$ and used the 5,125 remaining structures to draw structure--diffusivity relationships --- these structures for which we have a good degree of confidence on the diffusion coefficient values will be comparatively studied against different geometrical and thermodynamic quantities in this section
 
@@ -286,7 +286,7 @@ If we look into the details of these structures, we can see that they combine la
 
 We can see that at higher pressure, some materials experience a shift toward lower selectivity values. And, only 2 structures have an ambient-pressure selectivity over $40$: the MOFs with the following CSD code XUNSOQ\autocite{Abrahams_2014} and GUMDEZ\autocite{Yin_2014}  (see Table~\ref{table:diff}). Most of these materials actually have a high value of cavity size, only structures with LCD near \SI{6}{\angstrom} are left in this area of the plot. We can also note that the dimension of the channel is equal to one too, which starts to brush a picture of the interesting materials. These materials are constituted of unidimensional channels with a small pore sizes so that the selectivity is conserved even at higher pressure conditions. If we broaden the scope to the structures with a selectivity higher than $30$ instead of $40$, we now have 38 structures that also have similar features with rather low pore sizes and low channel dimensionality. Some of these structures have more or less kept their selectivity such as QOZDOY\autocite{Zhang_2001} and wasn't detected on the pre-screening on the low-pressure selectivity (Figure~\ref{fgr:perm_selec0}), but other structures, such as the MOF MISQIQ\autocite{Tong_2013}, actually dropped significantly in selectivity values from infinite dilution to ambient pressure (see Table~\ref{table:diff}). 
 
-When considering the ambient-pressure selectivity, the large majority of highly selective materials actually have a rather low diffusion selectivity (lower than $0.1$), as we can see on the Figure~\ref{fgr:perm_selec2080} (this was not the case for the low-pressure selectivity). This result suggest that a trade-off between adsorption selectivity and diffusion selectivity is actually needed. In my screening approach, I decided to lower the adsorption diffusivity to values around $40$ to allow for higher diffusion selectivity values, because up until now standard screenings in the literature\autocite{Simon_2015,Chung_2019} and in my published work~\ref{Ren_2021} only mazimized the adsorption selectivity --- this equivalent to working on the lower right side of the plots of Figure~\ref{fgr:perm_selec2080}. To improve the former approach, we included a kinetic constraint in our screening. Another approach would be to optimize the perm-selectivity also known as the membrane selectivity (equation~\ref{eq:membrane_selec}), but it would be the solution to another application, the membrane separation, which is broadly studied in the literature\autocite{Anderson_2017,Wang_2022}. From the screening we presented here, we would rather like to find thermodynamically selective materials that are not limited by diffusion, and some interesting identified materials will be further studied in the following subsection. 
+When considering the ambient-pressure selectivity, the large majority of highly selective materials actually have a rather low diffusion selectivity (lower than $0.1$), as we can see on the Figure~\ref{fgr:perm_selec2080} (this was not the case for the low-pressure selectivity). This result suggest that a trade-off between adsorption selectivity and diffusion selectivity is actually needed. In my screening approach, I decided to lower the adsorption diffusivity to values around $40$ to allow for higher diffusion selectivity values, because up until now standard screenings in the literature\autocite{Simon_2015,Chung_2019} and in my published work~\cite{Ren_2021} only mazimized the adsorption selectivity --- this equivalent to working on the lower right side of the plots of Figure~\ref{fgr:perm_selec2080}. To improve the former approach, we included a kinetic constraint in our screening. Another approach would be to optimize the perm-selectivity also known as the membrane selectivity (equation~\ref{eq:membrane_selec}), but it would be the solution to another application, the membrane separation, which is broadly studied in the literature\autocite{Anderson_2017,Wang_2022}. From the screening we presented here, we would rather like to find thermodynamically selective materials that are not limited by diffusion, and some interesting identified materials will be further studied in the following subsection. 
 
 
 \subsubsection{Identification of interesting materials}
@@ -295,7 +295,7 @@ By crossing the transport data with the thermodynamic one, we can optimize the X
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/viz/OQESAF.jpg}
+    \includegraphics[height=0.4\textwidth]{figures/5-diffusion/viz/OQESAF.jpg}
     \caption{Wrongly attributed to high diffusion selectivity\todo{OQESAF picture}}\label{fgr:OQESAF}
 \end{figure}
 
@@ -309,14 +309,14 @@ In this section, we will look into the details of the comparative transport and 
   Structure &       &    &  Pore size &  Channel size   &     & Diffusion Coeff. \\
   CSD ref.\ code &  $s_0\ex{Xe/Kr}$  &  $s_1\ex{Xe/Kr}$   &    D$_{if}\ex{UFF}$ (\si{\angstrom})   &   PLD\ex{UFF} (\si{\angstrom})  &  $s\e{diff}\ex{Xe/Kr}$ &  $D\e{diff}\ex{Xe}$ (\si{\square\centi\meter\per\second}) \\
 \hline
+OQESAF~\cite{Xie_2011} & 28 & 28 &  5.8 & 5.0 &  17 &  4$\times$10\ex{-5} \\
 ADOGEH~\cite{Peikert_2012} & 49  &  10 & 12.9 & 5.3 & 15.5 &  5$\times$10\ex{-5}  \\
 XUNSOQ~\cite{Abrahams_2014} & 38  & 48 &  5.6 & 4.8 &  0.23 &  7$\times$10\ex{-6} \\
 GUMDEZ~\cite{Yin_2014} & 56 & 42 &  5.5 & 5.1 &  0.55 &  7$\times$10\ex{-5} \\
 QOZDOY~\cite{Zhang_2001} & 52  & 37 &  5.6 & 5.0 &  0.45 &  7$\times$10\ex{-5} \\
 MISQIQ~\cite{Tong_2013} & 140 & 37 &  4.6 & 4.5 &  1.4 &  2$\times$10\ex{-4} \\
+BAEDTA01~\cite{Chen_2010} & 152 & 38 &  5.7 & 4.6 &  0.4 &  \todo{} \\
 TONBII~\cite{Du_2010} & 44 & 35 &  5.1 & 4.8 &  0.86 &  1$\times$10\ex{-4} \\
-BAEDTA01_clean	37.741382	152.160042	5.69169	4.63570	0.400504	
-OQESAF_clean	27.903385	27.667023	5.79096	4.96599	16.856013	0.000037
 \hline
 \end{tabular}
 \caption{Transport and thermodynamic performances of top performing structures of CoRE MOF 2019 screened out by the approach developed in section~\ref{sct:diff_screen}. The thermodynamic properties are determined using $s_0\ex{Xe/Kr}$ and $s_1\ex{Xe/Kr}$ that correspond to the xenon/krypton adsorption selectivity values respectively at infinite dilution and ambient pressure condition. The pore size is defined as the largest cavity along a free diffusion path D$_{if}\ex{UFF}$ and the channel size is defined using the pore limiting diameter PLD\ex{UFF} using atom radii defined by the UFF. The transport properties are evaluated using the xenon/krypton diffusion selectivity $s\e{diff}\ex{Xe/Kr}$ and the xenon diffusion coefficient $D\e{diff}\ex{Xe}$ calculated by the MD-based screening presented above. }\label{table:diff}
@@ -327,34 +327,41 @@ The structure ADOGEH\autocite{Peikert_2012} was not found when crossing the tran
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/viz/ADOGEH_Xe.jpg}
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/viz/ADOGEH_Kr.jpg}
+    \includegraphics[height=0.4\textwidth]{figures/5-diffusion/viz/ADOGEH_Xe.jpg}
+    \includegraphics[height=0.4\textwidth]{figures/5-diffusion/viz/ADOGEH_Kr.jpg}
     \caption{3D volume plot of the xenon (left) and krypton (right) interaction energy values inside the material ADOGEH\autocite{Peikert_2012} calculated using an energy grid as described in section~\ref{sct:grid}. }\label{fgr:ADOGEH}
 \end{figure}
 
-And even as an experimental material, the diffusion properties of xenon and krypton in this material are extremely interesting in themselves. If we look at the Figure~\ref{fgr:perm_selec0}, only two materials have a diffusion selectivity over $10$, but the other one actually has a falsely high value of diffusion selectivity due to the above-mentioned randomness of the initial position in the MD simulation and the presence of two types of channel (see Figure~\ref{fgr:false_diff_sele}). ADOGEH is therefore the only material that shows such a high diffusion selectivity among all materials screened for their diffusion performance. In a unidimensional system, it is actually more natural to have a higher or equivalent diffusion coefficient for krypton than for xenon due to the obvious size difference. It is possible to explain this exceptional by a special mechanism that happens in the tridimensional network of channel of ADOGEH. As we can see on the Figure~\ref{fgr:ADOGEH}, for both xenon and krypton all dimensions are available for diffusion through the channels in the three cardinal directions. However, when we look at the sort of ``pocket'' (not a blocking pocket in the MD simulation) that connects the channels diagonally, the access to it is clearly not the same if we compare the two 3D energy grid plots. For xenon, on the left, the connection is way thinner than for krypton for the same energy threshold. This can be interpreted as a higher energy barrier for xenon than for krypton to access this ``pocket''. But, why would this explain the unusual difference in diffusion coefficients for xenon and krypton? This can be explained by the fact that the directions in which a krypton can diffuse is therefore much higher, which means that it has a higher probability of turning around than xenon. To say it more explicitely, a xenon can diffuse in the 3D space by taking the 6 main channels only, but a krypton would lose time in small channels connecting the cardinal directions --- opening up dimensions decreases the diffusion coeffcient ($\langle{r(t)}^2\rangle=2d\tau$). Moreover, when a krypton takes the small channel toward the ``pocket'', it would have a non negligible residence time inside, which further slows it down compared to a xenon. These ``pockets'' can be seen as traps for krypton if it were a race between both adsorbate inside the nanoporous material. 
+And even as an experimental material, the diffusion properties of xenon and krypton in this material are extremely interesting in themselves. If we look at the Figure~\ref{fgr:perm_selec0}, only two materials have a diffusion selectivity over $10$, but the other one actually has a falsely high value of diffusion selectivity due to the above-mentioned randomness of the initial position in the MD simulation and the presence of two types of channel (see Figure~\ref{fgr:OQESAF}). ADOGEH is therefore the only material that shows such a high diffusion selectivity among all materials screened for their diffusion performance. In a unidimensional system, it is actually more natural to have a higher or equivalent diffusion coefficient for krypton than for xenon due to the obvious size difference. It is possible to explain this exceptional by a special mechanism that happens in the tridimensional network of channel of ADOGEH. As we can see on the Figure~\ref{fgr:ADOGEH}, for both xenon and krypton all dimensions are available for diffusion through the channels in the three cardinal directions. However, when we look at the sort of ``pocket'' (not a blocking pocket in the MD simulation) that connects the channels diagonally, the access to it is clearly not the same if we compare the two 3D energy grid plots. For xenon, on the left, the connection is way thinner than for krypton for the same energy threshold. This can be interpreted as a higher energy barrier for xenon than for krypton to access this ``pocket''. But, why would this explain the unusual difference in diffusion coefficients for xenon and krypton? This can be explained by the fact that the directions in which a krypton can diffuse is therefore much higher, which means that it has a higher probability of turning around than xenon. To say it more explicitely, a xenon can diffuse in the 3D space by taking only 3 main directions, but a krypton would lose time deviating from the cardinal directions --- the same way as opening-up dimensions decreases the diffusion coefficient ($\langle{r(t)}^2\rangle=2d\tau$). Moreover, when a krypton takes the small channel toward the ``pocket'', it would have a non negligible residence time inside, which further slows it down compared to a xenon. These ``pockets'' can be seen as traps for krypton, if it were a race between both adsorbate inside the nanoporous material. 
 
 \todo{HERE}
 
-\begin{figure}[ht]
-  \centering
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/viz/XUNSOQ.jpg}
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/viz/GUMDEZ.jpg}
-    \caption{\todo{}}\label{fgr:Other}
-\end{figure}
+Beyond the particular cases of OQESAF and ADOGEH, other nanoporous materials have lower diffusion selectivity values. For instance, all the other materials of the Table~\ref{table:diff} have a diffusion selectivity between $0.2$ and $1.4$. Depending on the shape and the size distribution of the porous channels, we would have higher or lower values of diffusion selectivity and xenon diffusion coefficient values. 
+
+If we take the materials with nanopores composed of pseudo-spherical cavities connected by cylindrical channels, we can see a clear correlation between the difference D$_{if}-$D$_f$ (between the LCD and the PLD) and the diffusion selectivity. \todo{plot} 
+
+\todo{Try to see if there is actually a correlation, on more }
+
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/viz/BAEDTA01.jpg}
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/viz/MISQIQ.jpg}
-    \caption{\todo{}}\label{fgr:drop_selec}
+  \includegraphics[height=0.28\textwidth]{figures/5-diffusion/viz/XUNSOQ.jpg}
+  \includegraphics[height=0.28\textwidth]{figures/5-diffusion/viz/BAEDTA01.jpg}
+  \includegraphics[height=0.28\textwidth]{figures/5-diffusion/viz/TONBII.jpg}
+  \caption{\todo{}}\label{fgr:tube_cavities}
 \end{figure}
+
+If we look at another type of shape, as we can see of the Figure~\ref{fgr:zigzag}, the channels are much more tortuose than the previous type of channel. It seems to make a ``zig-zag'' like shape. 
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/viz/TONBII.jpg}
-    \caption{\todo{}}\label{fgr:TONBII}
+    \includegraphics[height=0.4\textwidth]{figures/5-diffusion/viz/MISQIQ.jpg}
+    \includegraphics[height=0.4\textwidth]{figures/5-diffusion/viz/GUMDEZ.jpg}
+    \caption{\todo{}}\label{fgr:zigzag}
 \end{figure}
+\todo{add a less selective one with this tortuose shepe}
+
+Go beyond this study by quantitatively quantify tortuosity and try to find patterns in the correlations.
 
 \todo{write about this \autocite{Stanton_2022}}
 
