--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -29,7 +29,7 @@ To define these pore sizes, we need to first set the radii of the framework atom
 
 The surface areas are calculated using a random sampling over the surface of the different atom surfaces. The algorithm counts only the points that do not overlap with another atom. For each atom we can therefore calculate an adsorbable surface. By summing up all the surfaces, we finally have the surface area. This ``rolling ball'' algorithm has been developed since 1973 by Shrake and Rupley.\autocite{Shrake1973} the By defining a probe, the Voronoi tessellation defines the accessible and the non-accessible areas of the structure. Depending on where the surfaces are, they are either counted in the accessible or the non-accessible surface areas. In this chapter, we will use the accessible surface area defined by a probe of $1.2$~\si{\angstrom}; this is a computational equivalent of the experimental \ce{N2} BET surface area.
 
-\begin{figure}[h!]
+\begin{figure}[ht!]
   \centering
   \includegraphics[width=0.7\textwidth]{figures/1-screening/Pore_descriptors.jpg}
   \caption{Illustration of the pore surface area and volume in a nanoporous material. As illustrated, there are different definitions of the pore volume: we can either consider the whole volume of the pores or the volume occupiable by a given probe. The surface area also changes depending on the definition. Studies have shown that occupiable volume has a better accordance with experimental data.\autocite{vol_Ongari2017}}\label{fgr:pores}
@@ -252,7 +252,7 @@ Now that we defined the exchange Gibbs free energy and an exchange enthalpy at a
   }
 \end{equation}
 
-Before concluding this methodological section, we need to note that the thermodynamic quantities associated to this newly defined adsorption exchange equilibrium can be defined at different pressures and different methodologies can be used to calculate them. At infinite dilution, we would preferably use Widom insertions and the adsorption free energies and enthalpies to deduce these exchange quantities; at higher pressure, we would use the GCMC calculation to define a free energy (via the loading values) and the isosteric adsorption heat to define them. In the following study, we will focus on only two pressures: the ambient pressure (at \SI{1}{\atm}) and the limit of zero loading (infinite dilution). At \SI{1}{\atm}, the previously defined quantities will have an index $1$ to differentiate them from the infinite dilution case where an index $0$ will be used; for example, $\Delta\e{ads}H\e{1}\ex{Xe/Kr}$, $\Delta\e{exc}G\e{1}\ex{Xe/Kr}$ or $s\e{1}\ex{Xe/Kr}$ at \SI{1}{\atm}, and $\Delta\e{ads}H\e{0}\ex{Xe/Kr}$, $\Delta\e{exc}G\e{0}\ex{Xe/Kr}$ or $s\e{0}\ex{Xe/Kr}$ at the low-pressure limit. One final note on the simulation details, to run the GCMC calculations and the Widom insertion, we used the RASPA software developed by Dubbeldam et al.\autocite{dubbeldam2016} And, the intermolecular van der Waals interactions were described by a Lennard-Jones (LJ) potential with a cutoff distance of \SI{12}{\angstrom}. The LJ parameters of the framework atoms are given by the universal force field (UFF),\autocite{rappe1992} and the guest atoms (xenon and krypton) have their LJ parameters taken from a previous screening study.\autocite{Ryan_2010} All the MOFs described here are taken from the CoRE MOF 2019 database.\autocite{Chung_2019}
+Before concluding this methodological section, we need to note that the thermodynamic quantities associated to this newly defined adsorption exchange equilibrium can be defined at different pressures and different methodologies can be used to calculate them. At infinite dilution, we would preferably use Widom insertions and the adsorption free energies and enthalpies to deduce these exchange quantities; at higher pressure, we would use the GCMC calculation to define a free energy (via the loading values) and the isosteric adsorption heat to define them. In the following study, we will focus on only two pressures: the ambient pressure (at \SI{1}{\atm}) and the limit of zero loading (infinite dilution). At \SI{1}{\atm}, the previously defined quantities will have an index $1$ to differentiate them from the infinite dilution case where an index $0$ will be used; for example, $\Delta\e{ads}H\e{1}\ex{Xe/Kr}$, $\Delta\e{exc}G\e{1}\ex{Xe/Kr}$ or $s\e{1}\ex{Xe/Kr}$ at \SI{1}{\atm}, and $\Delta\e{ads}H\e{0}\ex{Xe/Kr}$, $\Delta\e{exc}G\e{0}\ex{Xe/Kr}$ or $s\e{0}\ex{Xe/Kr}$ at the low-pressure limit. One final note on the simulation details, to run the GCMC calculations and the Widom insertion, we used the RASPA2 software developed by Dubbeldam et al.\autocite{dubbeldam2016} And, the intermolecular van der Waals interactions were described by a Lennard-Jones (LJ) potential with a cutoff distance of \SI{12}{\angstrom}. The LJ parameters of the framework atoms are given by the universal force field (UFF),\autocite{rappe1992} and the guest atoms (xenon and krypton) have their LJ parameters taken from a previous screening study.\autocite{Ryan_2010} All the MOFs described here are taken from the CoRE MOF 2019 database.\autocite{Chung_2019}
 
 %%%%%%
 
@@ -269,7 +269,7 @@ An adsorption separation process is primarily characterized by a pivotal perform
 Before digging deeper in the structure--selectivity relationship, we will look at the relation between the xenon uptake (the number of adsorbed xenon in the GCMC simulation) and the selectivity at \SI{1}{\atm}. For instance, the xenon uptake could also be very important in a separation process, because it defines the working capacity of xenon produced by adsorption/desorption cycles. According to the Figures~\ref{fgr:sa} and~\ref{fgr:vol}, first high xenon uptakes are associated with a high selectivity, but at some point very high selectivity is associated to lower uptakes. There seem to be an area where materials have selectivity over $100$ and Xe uptake around \SI{3}{\milli\mole\per\gram}, whereas an uptake over \SI{6}{\milli\mole\per\gram} can only be obtained for a selectivity between $10$ and $20$. One cannot maximize both uptake and selectivity metrics at the same time, a trade-off needs to be made when designing nanoporous materials for xenon/krypton separation.\autocite{Zhang_2022} Different strategies have been implemented to optimize both metrics using mixed metrics such as the adsorbent performance score (APS).\autocite{Solanki_2020}
 This trade-off can be rationalized by using the different structural descriptors (pore size, surface area and volume) we presented earlier. 
 
-\begin{figure}[h]
+\begin{figure}[ht]
   \centering
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/3D_hist_selec_uptake.pdf}
   \caption{3D histograms of in a bidimensional space formed by the Xe/Kr selectivity and the xenon uptake. The z-axis represents the number of structures with characteristics close to the one specified in x and y-axis. A base-10 logarithm has been applied to the selectivity values.}\label{fgr:3D_uptake}
@@ -279,7 +279,7 @@ Furthermore, even if we know that it is possible to optimize either the xenon up
 
 \subsubsection{Surface area and selectivity}
 
-\begin{figure}[h!]
+\begin{figure}[ht!]
   \centering
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_uptake_selectivity_sa.pdf}
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_sa_selectivity.pdf}
@@ -290,7 +290,7 @@ As demonstrated by other studies on methane storage applications by Wilmer et al
 
 Looking at the 3D histogram on the Figure~\ref{fgr:3D_hist_sa_vol}, we can see the breakdown of the surface area ranges for different categories of selectivity. For selectivity values higher than $92$, the surface areas are most likely to be under $2000$~\si{\square\meter\cubic\centi\meter}; between $92$ and $35$, there is a slightly wider range that goes to $2500$~\si{\square\meter\cubic\centi\meter}; between $35$ and $13$, the interval goes even further to $3500$~\si{\square\meter\cubic\centi\meter} but is mostly centered between $1000$ and $2500$~\si{\square\meter\cubic\centi\meter}. This split view of the distributions gives a better grasp on what the best materials look like; however the surface area will never be a deterministic variable --- we will never be available to deduce the selectivity by simply looking at the surface area, because a surface area between, for instance, $500$ and $1000$~\si{\square\meter\cubic\centi\meter} have a relatively good chance of being selective but it concerns a lot of materials and it even has a higher chance of having a selectivity between $5$ and $35$ than a selectivity higher than that. 
 
-\begin{figure}[h!]
+\begin{figure}[ht!]
   \centering
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/3D_hist_selec_SA.pdf}
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/3D_hist_selec_vol.pdf}
@@ -314,7 +314,7 @@ By carrying out a similar analysis than for the surface areas bu for the void fr
 
 The ideal pore size for the xenon krypton separation can be deduced from the Figure~\ref{fgr:lcd}. On the right plot we can see that the most selective materials have a pore size near \SI{5}{\angstrom}. However, it is hard to distinguish between the ver low selectivity materials that have a similar label color. To see the difference, we plotted with different colors the structures with D$_i$ between $3.6$ and $11.6$~\si{\angstrom}. And we can see clearly that the pore size needs to be around \SI{5}{\angstrom} but if it is too low (near \SI{4.5}{\angstrom}), the selectivity drops significantly. Hence, there is a sweet spot of pore size values that enable very high selectivity.
 
-\begin{figure}[h!]
+\begin{figure}[ht!]
   \centering
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_uptake_selectivity_lcd.pdf}
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_uptake_selectivity_lcd_zoom.pdf}
@@ -323,7 +323,7 @@ The ideal pore size for the xenon krypton separation can be deduced from the Fig
 
 If we now look at the joint effects of the void fraction and the largest cavity diameter (D$_i$) on the selectivity, we can note that the most selective materials are located in a very particular domain of this bidimensional descriptor space. On Figure~\ref{fgr:lcd_vf}, the structures with a selectivity over $10$ are very likely to have a void fraction under $0.4$ with a rather wide range of D$_i$. However, as we can see on the filtered version of the plot (on the right), the most selective materials (over $40$) exist, on the other hand, in a very narrow range of D$_i$ values between $4.8$ and $6$~\si{\angstrom} approximately. This can be explained by the size of a xenon atom being very close to these D$_i$ values, which allows a maximal stabilization of the xenon that we want to separate from krypton. The krypton being slightly smaller, the interaction with the pores are less favorable, hence explaining the higher selectivity we observe. 
 
-\begin{figure}[h!]
+\begin{figure}[ht!]
   \centering
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_vf_lcd_selectivity.pdf}
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_vf_lcd_selectivity_zoom.pdf}  
@@ -349,7 +349,7 @@ As shown on the Figure~\ref{fgr:SI:overview_2080_9010}, selectivity values of bo
 %higher uptakes
 We will now see the effect of the composition on the different analysis we carried out on the different structural descriptors. One of the major changes when considering a mixture with much more xenon is the values of the xenon uptake. The nanopores of selective materials ($1<s_1\leq 50$) are much more saturated in Xe and the maximum amount of xenon is therefore much higher. By comparing the Figures~\ref{fgr:vol} and~\ref{fgr:compo}, the maximum uptake is now \SI{11.7}{\milli\mole\per\gram} instead of \SI{6.6}{\milli\mole\per\gram} (for the 20:80 composition). For moderately selective materials, at 20:80, the xenon competes with krypton mainly in the most selective nanopores, but when we increase the xenon content it has to compete with krypton in much less favorable sites since the other sites are already saturated. We previously stated that the most selective ($s_1>50$) materials could reach up to \SI{4.0}{\milli\mole\per\gram} of xenon uptake, for a composition with a higher xenon content, and it reaches up to \SI{4.2}{\milli\mole\per\gram} again, which is not a big change. For the most selective materials, the previous conclusion on the maximum uptake can still stand. Because of the extremely high selectivity, the change in composition does not change the nature of the adsorbed state and about the same quantities of xenon are present in the pores. Finally, we can say that a higher content in xenon does not influence a lot the most selective materials' performance but it could alter the selectivity and increase a lot the xenon uptake for some moderately selective materials.
 
-\begin{figure}[h!]
+\begin{figure}[ht!]
   \centering
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_uptake_selectivity_vol_9010.pdf}  
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_vf_lcd_selectivity9010.pdf}
@@ -384,7 +384,7 @@ With regard to Henry's constants, we observe a broad selection of behavior, with
 
 We first observe that the low-loading adsorption enthalpy of xenon ($\Delta\e{ads}H\ex{Xe}\e{0}$) is strongly correlated to that of krypton ($\Delta\e{ads}H\ex{Kr}\e{0}$). Echoing the similar correlation seen between respective Henry's constants, it suggests a rather generic physisorption mechanism is at play in the majority of materials, and that host--adsorbate affinities are mainly determined by the enthalpy. The main driver of Xe/Kr selectivity is neither the xenon nor krypton adsorption enthalpy alone (both are weakly correlated to the selectivity), but as expected their difference, $\Delta\e{exc}H\e{0}$, which is strongly correlated to $\log(s\e{0})$. This is further confirmed by the lack of correlation between selectivity and adsorption entropies (\emph{cf.} Figure~\ref{fgr:SI:HS_0_log}): the separation is mostly enthalpic in nature, and the entropy causes the dispersion in the correlation between selectivity $\log(s\e{0})$ and $\Delta\e{exc}H\e{0}$.
 
-\begin{figure*}[h]
+\begin{figure*}[ht]
   \centering
     \includegraphics[width=0.60\textwidth]{figures/2-thermo/Entropy_0.jpg}
     \caption{For 8,401 MOFs with favorable thermodynamic Xe/Kr selectivity ($s\e{0} > 1$), pair plots of $s\e{0}$, $\Delta\e{exc}S\e{0}$, $\Delta\e{ads}S\ex{Xe}\e{0}$ and $\Delta\e{ads}S\ex{Kr}\e{0}$ in the off-diagonal subplots and the distribution of each quantity are on the diagonal.}\label{fgr:SI:HS_0_log}
@@ -392,7 +392,7 @@ We first observe that the low-loading adsorption enthalpy of xenon ($\Delta\e{ad
 
 Analyzing the Figure~\ref{fgr:SI:HS_0_log} in more detail, the adsorption entropy of xenon and krypton being noticeably correlated, their difference (the exchange entropy) does not have a lot of variations (see Figure~\ref{fgr:SI:dist0}) compared to the enthalpy. This thermodynamic quantity plays a minor role in the selectivity performance of the materials. However it seems that the most selective materials do not have any values of exchange entropy but is centered around a value of about \SI{-10}{\kilo\joule\per\mole\per\kelvin}. This is not a clean correlation but rather a necessary attribute of a selective material.
 
-\begin{figure*}[h]
+\begin{figure*}[ht]
   \centering
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/Delta_H_0.jpg}
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/T_Delta_S_0.jpg}
@@ -401,7 +401,7 @@ Analyzing the Figure~\ref{fgr:SI:HS_0_log} in more detail, the adsorption entrop
 
 To emphasize one more time on the enthalpic nature of the separation by comparing the base-10 logarithm of the Henry constant (proportional to the adsorption free energy) and the adsorption enthalpy for both xenon and krypton. We can see, Figure~\ref{fgr:SI:HK} that the free energy can be almost totally explained by the enthalpy, which confirms the secondary role of the entropy that explains the variance in this linear relation. The effect of the entropy makes the correlation quite weak for the less favorable adsorption materials, but as we move to more negative values of the adsorption enthalpies, the correlation is stronger and stronger. The most selective materials have an almost negligible entropic contribution in the final free energy value ($G=H-TS$).
 
-\begin{figure*}[h]
+\begin{figure*}[ht]
   \centering
     \includegraphics[width=0.35\textwidth]{figures/2-thermo/H_K_Xe.jpg}
     \includegraphics[width=0.35\textwidth]{figures/2-thermo/H_K_Kr.jpg}
@@ -477,7 +477,7 @@ To evaluate quantitatively the thermodynamic effects at play in the competitive 
   \caption{The energetic equivalent of exchange entropy $T\Delta\e{exc}S\e{1}$ and enthalpy $\Delta\e{exc}H\e{1}$ at ambient pressure labeled using the selectivity $s\e{0}$ at low pressure. The points are layered so that the points with higher $s\e{0}$ are always above. To see a split version of this plot, please refer to the Figure~\ref{fgr:SI:HS_split}.}\label{fgr:HSplot_1}
 \end{figure}
 
-\begin{figure*}[h]
+\begin{figure*}[ht]
   \centering
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/H_S_0.jpg}
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/H_S_1.jpg}
@@ -491,7 +491,7 @@ In the Figure~\ref{fgr:SI:dist0}, we display the distributions of the exchange e
 
 Looking at the Figure~\ref{fgr:SI:dist1}, at ambient pressure, we can state the same conclusions on the limited influence of the entropy on the selectivity values. The distribution of the entropic term $T\Delta\e{exc}S\e{1}$ is now centered around $-3$~\si{\kilo\joule\per\mole}, which is also quite small in comparison of the values of $\Delta\e{exc}H\e{1}$. For the most selective materials, the entropic term represents about {$19$\%} of the exchange enthalpy at ambient pressure.
 
-\begin{figure*}[h]
+\begin{figure*}[ht]
   \centering
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/Delta_H_2080.jpg}
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/T_Delta_S_2080.jpg}
@@ -604,7 +604,7 @@ We first study a few examples of the category of materials where ambient-pressur
 
 In the case of KAXQIL, the channels are one-dimensional tubes (see Figure~\ref{fgr:SI:examples:KAXQIL}) and the distance between two adsorption sites is approximately the unit cell parameter along the direction of the tube (\SI{5.6}{\angstrom}). There the selectivity increases with pore filling, for enthalpic reasons, which we can explain by relatively simple reasoning. The Lennard-Jones potentials $U\ex{LJ}$ can be estimated for all species at \SI{5.6}{\angstrom}: $U\ex{LJ}\e{Xe-Xe}=-1.0$\,\si{\kilo\joule\per\mol}, $U\ex{LJ}\e{Kr-Kr}=-0.3$\,\si{\kilo\joule\per\mol} and $U\ex{LJ}\e{Xe-Kr}=-0.5$\,\si{\kilo\joule\per\mol}. In a simplistic model where all adsorbed molecules are \SI{5.6}{\angstrom} apart, the cooperative effect is higher between two xenon molecules, which explains the increased selectivity at high uptake. If we look further at the adsorption enthalpy of both xenon and krypton (\emph{cf.} Table~\ref{tbl:thermo}), they both increase: the guest molecules move from the ``ideal'' adsorption sites, and the guest--guest interactions do not fully compensate. The selectivity change in this material is therefore a consequence of the guest--guest interactions that rearranges the position of the adsorbates inside the nanopores.
 
-\begin{figure*}[h]
+\begin{figure*}[ht]
   \centering
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/KAXQIL_clean.jpg}
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/KAXQIL_clean_isotherm_xenon_krypton_298K.jpg}
@@ -613,7 +613,7 @@ In the case of KAXQIL, the channels are one-dimensional tubes (see Figure~\ref{f
 
 To further corroborate the role of the guest--guest interactions, we look at another material with one-dimensional tubelike channels: JUFBIX, a cobalt(II) coordination polymer based on carboxylic acid linkers (see Figure~\ref{fgr:SI:examples:JUFBIX}).\autocite{JUFBIX} The periodicity along the direction of the tubes is much higher at $7.2$\,\si{\angstrom}. The pair interaction energies corresponding to the LJ potentials at this distance are $U\ex{LJ}\e{Xe-Xe}=-0.24$\,\si{\kilo\joule\per\mol}, $U\ex{LJ}\e{Kr-Kr}=-0.06$\,\si{\kilo\joule\per\mol} and $U\ex{LJ}\e{Xe-Kr}=-0.13$\,\si{\kilo\joule\per\mol}. By looking at the adsorption enthalpies (Table~\ref{tbl:effect}), these values are too small to affect the position of the adsorbed molecules. At high loading, the distance between adsorbed molecules is high, and every adsorption site is independent of the others. The ambient-pressure selectivity $s\e{1}$ is therefore the same as the low-pressure selectivity $s\e{0}$, since every guest--guest interactions are negligible. It confirms the crucial role of cooperative effects between guest molecules when considering a saturated material.
 
-\begin{figure*}[h]
+\begin{figure*}[ht]
   \centering
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/JUFBIX_clean.jpg}
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/JUFBIX_clean_isotherm_xenon_krypton_298K.jpg}
@@ -623,7 +623,7 @@ To further corroborate the role of the guest--guest interactions, we look at ano
 GOMREG and JAVTAC are frameworks that belong to the second category of materials, with a moderate decrease in selectivity from low to ambient pressure. In GOMREG, the channels are composed of one-dimensional tubes larger than the ones found in KAXQIL or JUFBIX (see Figure~\ref{fgr:SI:examples:GOMREG} and Table~\ref{tbl:effect}). The adsorption sites are alternating from left to right inside the channel, and the adsorbed molecules organize in a ``zigzag'' pattern. Looking at the adsorption enthalpies, we see that both xenon and krypton have lower enthalpies by a similar margin, suggesting an equivalent stabilization for both atoms, hence the enthalpic contribution to the selectivity change is close to 1.
 Since krypton is smaller and less strongly tied on its adsorption site than xenon, it has more available space inside the pore space. This gives an entropic advantage to the Kr, seen in the entropic contribution $k\e{S}$ of $0.64$ in Table~\ref{tbl:effect}. This indicates that even if enthalpic considerations mainly explain the observed changes at a statistical level, as discussed in the previous sections, for individual cases entropic considerations can be a strong factor in pressure-dependent selectivity.
 
-\begin{figure*}[h]
+\begin{figure*}[ht]
   \centering
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/GOMREG_clean.jpg}
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/GOMREG_clean_isotherm_xenon_krypton_298K.jpg}
@@ -635,7 +635,7 @@ The remaining materials discussed here form a third category, with a strong decr
 
 For example, GOMRAC has a similar structure compared to GOMREG (see Figure~\ref{fgr:SI:examples:GOMRAC}), except for the fact that the pores and channels are smaller (see the values of the D$_i$, and the D$_f$, in Table~\ref{tbl:effect}). The distances between the adsorbed molecules --- in their ideal sites --- are then consequently smaller. At such distances, we can assume that the interactions between adsorbates become more stabilizing for krypton than for xenon molecules in GOMRAC (see LJ potentials at distance lower than \SI{4.2}{\angstrom} in the Figure~\ref{fgr:LJ}), which translates into an enthalpic contribution $k\e{H}$ of $0.58$. Moreover, this is compatible with the equivalent guest--guest interactions in GOMREG, as previously discussed. It explains why the difference between the adsorption enthalpies becomes smaller for GOMRAC, whereas it stays the same for GOMREG (between low and ambient pressure). This further validates the crucial role of the interactions between adsorbed molecules, and their relationship with the guest-guest distances when considering a high loading condition.
 
-\begin{figure*}[h]
+\begin{figure*}[ht]
   \centering
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/GOMRAC_clean.jpg}
     \includegraphics[width=0.45\textwidth]{figures/2-thermo/GOMRAC_clean_isotherm_xenon_krypton_298K.jpg}
